<resources>
    <string name="app_name">DotaApp</string>
    <string name="heroe">HEROE</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>

    <string name="first_button">Agilidad</string>
    <string name="second_button">Fuerza</string>
    <string name="third_button">Inteligencia</string>

    <string name="Abilities">Abilities</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="heroe_name">Hero Name</string>
    <string name="heroe_img">Hero Img</string>
    <string name="heroe_attack_type">Attack Type</string>
    <string name="heroe_attribute">Primary Attribute</string>
    <string name="heroe_role">Role N</string>

</resources>
