<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.HeroeActivity">

    <TextView
        android:id="@+id/heroe_name"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center"
        android:text="@string/heroe_name"/>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">
        <ImageView
        android:id="@+id/heroe_image"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:src="@android:drawable/alert_dark_frame"
        android:contentDescription="@string/heroe_img"
        tools:ignore="HardcodedText" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/heroe_attack_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/heroe_attack_type"/>
                <TextView
                    android:id="@+id/heroe_attribute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/heroe_attribute"/>
            </LinearLayout>
            <TextView
                android:id="@+id/heroe_roles"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/heroe_role"/>

        </LinearLayout>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Abilities"/>

    <ListView
        android:id="@+id/listaAbilities"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray" />
</LinearLayout>