<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HeroesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="@color/colorPrimaryDark">
        <Button
            android:id="@+id/btn_first"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/black"
            android:text="@string/first_button"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/btn_second"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/black"
            android:textColor="@android:color/white"
            android:text="@string/second_button"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/btn_third"
            android:layout_width="match_parent"
            android:background="@android:color/black"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:text="@string/third_button"
            android:layout_height="match_parent"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <GridView
        android:id="@+id/grillaHeroes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="40"
        android:columnWidth="120dp"
        android:gravity="center"
        android:numColumns="2"
        android:stretchMode="columnWidth"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
</LinearLayout>